# noleak

./: .gitignore  LICENSE  README.md  pubspec.yaml
android/: key.properties.example
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  build_libsodium.sh  vault_container.c  vault_crypto.c  vault_engine.c  vault_engine.h  vault_index.c  vault_jni.c  vault_streaming.c  vault_streaming.h  vault_streaming_jni.c
android/app/src/main/cpp/libsodium/include/: Makefile
android/app/src/main/kotlin/com/noleak/noleak/: MainActivity.kt  (+1 more)
android/app/src/main/res/xml/: data_extraction_rules.xml
android/app/src/test/native/: kdf_profile_test.c  streaming_bounds_test.c
lib/: main.dart
lib/models/: vault_info.dart  vault_state.dart
lib/screens/: app_lock_screen.dart  audio_player_screen.dart  blocked_screen.dart  create_vault_screen.dart  document_viewer_screen.dart  image_viewer_screen.dart  text_viewer_screen.dart  unlock_vault_screen.dart  vault_dashboard_screen.dart  vault_home_screen.dart  vault_info_screen.dart  video_player_screen.dart
lib/services/: app_settings.dart  streaming_import_service.dart  transfer_progress_service.dart  vault_channel.dart  vault_registry.dart  vault_state_manager.dart
lib/theme/: cyberpunk_theme.dart
lib/utils/: secure_logger.dart  secure_passphrase.dart
lib/widgets/: cyber_button.dart  cyber_text_field.dart  loading_overlay.dart  password_strength_meter.dart  responsive_layout.dart  secure_keyboard.dart
test/: document_viewer_lifecycle_test.dart  passphrase_transport_test.dart  responsive_layout_test.dart
(+20 files in other folders)
